Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-1405

Delphi compiler does not generates container serializer properly.

VotersWatch issueWatchersLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.8
    • 0.8
    • Delphi - Compiler

    Description

      There is a bug in the function that generates serializer of containers.

      Attachments

        Activity

          This comment will be Viewable by All Users Viewable by All Users
          Cancel

          People

            kenjiro Kenjiro Fukumitsu
            kenjiro Kenjiro Fukumitsu
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Slack

                Issue deployment