THRIFT-1405: Delphi compiler does not generates container serializer properly Client: delphi Patch: Kenjiro Fukumitsu

Fixess a bug in the function that generates serializer of containers



git-svn-id: https://svn.apache.org/repos/asf/thrift/trunk@1189009 13f79535-47bb-0310-9956-ffa450edef68